PLS-12538 and PLS-12228 fixing chevron alignment

--- a/le-ui/projects/common/assets/sass/_progress.scss
+++ b/le-ui/projects/common/assets/sass/_progress.scss
@@ -408,7 +408,7 @@ Wizard Steps
 				margin-left: 17px;
 			}
 			&:last-child {
-				margin-bottom: 9px;
+				margin-bottom: 12px;
 				border-left: 0;
 				margin-right: 0;
 				&:after, &:before {
